[2018-06-09 18:19:58 +0200]  Code cleanup (trailing spaces mostly)                                      karasu      {e5315a3f}
[2018-06-09 18:09:25 +0200]  Fix typo and remove unused code                                            karasu      {146a1075}
[2018-06-09 18:07:07 +0200]  More fixes in advanced dialogs                                             karasu      {0a70a02f}
[2018-06-09 17:16:48 +0200]  Missing param                                                              karasu      {3cdb8f25}
[2018-06-09 16:59:34 +0200]  Fix typos                                                                  karasu      {6eb0a770}
[2018-06-09 16:50:15 +0200]  Remove unused imports                                                      karasu      {2195c284}
[2018-06-09 16:48:52 +0200]  Added missing dialogs (still wip)                                          karasu      {5fb69b13}
[2018-06-09 01:43:03 +0200]  Remove unused code                                                         karasu      {d15e54f8}
[2018-06-09 01:40:39 +0200]  Fixed translations in create/edit partition dialog                         karasu      {c326a178}
[2018-06-09 01:13:34 +0200]  Fixes cache page bug                                                       karasu      {dddc1a45}
[2018-06-09 01:08:57 +0200]  Add missing tooltip                                                        karasu      {1d55f0c7}
[2018-06-09 01:02:32 +0200]  Fixed typos                                                                karasu      {7c45b1a8}
[2018-06-09 01:00:55 +0200]  Working this out.                                                          karasu      {c688ab9b}
[2018-06-08 20:28:08 +0200]  Edit dialog done. Create and Edit dialogs should have a common pare..      karasu      {08d602fb}
[2018-06-08 09:36:54 +0200]  luks settings done                                                         karasu      {c8d21a89}