@@ -37,7 +37,6 @@ import gi
 gi.require_version('Gtk', '3.0')
 from gi.repository import Gtk, Gdk
 
-import misc.extra as misc
 import parted3.fs_module as fs
 
 from dialogs.luks_settings import LuksSettingsDialog
